[package]
name = "adv-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
code-timing-macros = { version = "0.0.5", features = ["release"] }
const_format = "0.2.33"

# Additional recommended dependencies
itertools = "0.13.0"
regex = "1.11.1"
utf8-chars = "1.0.0"
image = "0.25.5"
priority-queue = "2.1.1"
